# runtrcks_C

./: .gitignore  CMakeLists.txt  char_is_digit.h  main.c  my_strlen.h  myputstr.c  myputstr.h
Day01/: char_is_digit.c  my_strcmp.c  my_strcmp.h  my_strcpy.c  my_strcpy.h  my_strdup.c  my_strdup.h  my_strlen.c  myputstr.h  split.c  split.h  trim.c  trim.h
Day02/: array_clone.c  array_clone.h  delete_str_array.c  delete_str_array.h  divide.c  divide.h  func_to_array.c  func_to_array.h  job7.c  job7.h  job8.c  job8.h  my_swap.c  my_swap.h  sort.c  sort.h
Day03/: fibonacci.c  fibonacci.h  itoa_hex.c  itoa_hex.h  job05.c  job05.h  my_atoi.c  my_atoi.h  my_itoa.c  my_itoa.h  my_power.c  my_power.h  my_sqrt.c  my_sqrt.h
Day04/: manhattan.c  manhattan.h
